[project]
name = "corgias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "ete3",
    "pastml",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "statsmodels>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
dynamic = ["name", "version"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
corgias = "src.main:main"

